# newgroad

./: App.cpp  App.h  CMakeLists.txt  CubeScene.cpp  CubeScene.h  DxUtils.cpp  DxUtils.h  FogScene.cpp  FogScene.h  JellyScene.cpp  JellyScene.h  OrbitCamera.h  Scene.h  TriangleScene.cpp  TriangleScene.h  WhirligigScene.cpp  WhirligigScene.h  imgui.ini  main.cpp  rigidbody.vcxproj  rigidbody.vcxproj.filters
x64/Debug/: rigidbody.exe.recipe  rigidbody.ilk  vc143.idb
x64/Debug/rigidbody.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rigidbody.lastbuildstate
